<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTransaction"
    android:background="@color/background">
    <TextView
        android:id="@+id/edit_transaction_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:gravity="center_horizontal"
        android:text="@string/edit_transaction"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fontFamily="@font/chelsea_market"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:padding="20sp"
        android:fontFamily="@font/chelsea_market"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_transaction_title">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25sp"
            android:layout_marginStart="25sp">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editIncomeRadioButton"
                android:layout_weight="50"
                android:text="@string/income"
                android:fontFamily="@font/chelsea_market"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                />
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editExpenditureRadioButton"
                android:layout_weight="50"
                android:fontFamily="@font/chelsea_market"
                android:text="@string/expenditure"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="60"
                android:paddingLeft="10sp"
                android:text="@string/amount"
                android:paddingStart="10sp"
                android:textColor="@color/white"
                android:fontFamily="@font/chelsea_market"/>

            <EditText
                android:id="@+id/editTransactionAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="60"
                android:paddingLeft="10sp"
                android:text="@string/date"
                android:textColor="@color/white"
                android:fontFamily="@font/chelsea_market"/>

            <Button
                android:id="@+id/editTransactionDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:onClick="openDatePicker"
                android:layout_marginTop="12sp"
                android:text="@string/select_date"
                android:textColor="@color/white"
                android:fontFamily="@font/chelsea_market"
                android:backgroundTint="@color/box_background"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_weight="60"
                android:paddingLeft="10sp"
                android:text="@string/comment"
                android:textColor="@color/white"
                android:fontFamily="@font/chelsea_market"/>

            <EditText
                android:id="@+id/editTransactionSource"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:inputType="textMultiLine"
                android:fontFamily="@font/chelsea_market"/>
        </LinearLayout>


        <Button
            android:id="@+id/editButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:text="@string/edit_transaction_button"
            android:onClick="editTransaction"
            android:backgroundTint="@color/box_background"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/delete_transaction"
            android:onClick="deleteTransaction"
            android:backgroundTint="@color/box_background"
            android:textColor="@color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>